[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Gas/Gas.gd" type="Script" id=2]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="Gas" type="Area2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="DetectDown" type="RayCast2D" parent="."]

[node name="DetectUp" type="RayCast2D" parent="."]
cast_to = Vector2( 0, -50 )

[node name="DetectLeft" type="RayCast2D" parent="."]
cast_to = Vector2( -50, 0 )

[node name="DetectRight" type="RayCast2D" parent="."]
cast_to = Vector2( 50, 0 )

[node name="DecayTimer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true
autostart = true
